// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderBreadcrumb href is rendered 1`] = `
<a
  class="euiHeaderBreadcrumb"
  href="#"
>
  <div
    class="euiHeaderBreadcrumb__text"
  />
</a>
`;

exports[`EuiHeaderBreadcrumb is rendered 1`] = `
<a
  aria-label="aria-label"
  class="euiHeaderBreadcrumb testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiHeaderBreadcrumb__text"
  >
    content
  </div>
</a>
`;

exports[`EuiHeaderBreadcrumb isActive is rendered 1`] = `
<a
  class="euiHeaderBreadcrumb euiHeaderBreadcrumb-isActive"
>
  <div
    class="euiHeaderBreadcrumb__text"
  />
</a>
`;
